--- a/app/src/main/res/layout/dialog_animal_detail_overlay.xml
+++ b/app/src/main/res/layout/dialog_animal_detail_overlay.xml
@@ -8,7 +8,7 @@
         android:id="@+id/detail_animal_image"
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerInside" />
 
     <!-- Rarity text above the star (top-right area) -->
     <TextView
@@ -16,8 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
-        android:layout_marginTop="65dp"
-        android:layout_marginEnd="60dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="30dp"
         android:text="Uncommon"
         android:textSize="14sp"
         android:textColor="#8B4513"
@@ -29,7 +29,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="30dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:text="Hellbender"
@@ -47,11 +47,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="82dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:text="Cryptobranchus alleganiensis"
-        android:textSize="18sp"
+        android:textSize="13sp"
         android:textColor="#FFD700"
         android:textStyle="italic|bold"
         android:shadowColor="@android:color/black"
@@ -65,7 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        android:layout_marginTop="115dp"
+        android:layout_marginTop="110dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:text="Found in: The Appalachians"
@@ -78,31 +78,22 @@
         android:shadowRadius="3" />
 
     <!-- Fun fact in the bottom text box area -->
+
     <TextView
         android:id="@+id/detail_animal_fun_fact"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="20dp"
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
+        android:layout_marginBottom="25dp"
+        android:lineSpacingMultiplier="1.1"
+        android:paddingLeft="10dp"
         android:paddingTop="10dp"
+        android:paddingRight="10dp"
         android:paddingBottom="10dp"
         android:text="Fun fact goes here"
-        android:textSize="14sp"
         android:textColor="#3E2723"
-        android:lineSpacingMultiplier="1.1" />
-
-    <Button
-        android:id="@+id/close_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Close"
-        android:textColor="@android:color/white"
-        android:backgroundTint="#7B4397"
-        android:layout_gravity="top|end"
-        android:layout_margin="10dp" />
+        android:textSize="13sp" />
 
 </FrameLayout>
