--- a/app/src/main/res/layout/item_animal_collection.xml
+++ b/app/src/main/res/layout/item_animal_collection.xml
@@ -34,6 +34,7 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/ic_animal_placeholder" />
 
+
                 <TextView
                     android:id="@+id/question_mark"
                     android:layout_width="wrap_content"
@@ -77,15 +78,31 @@
                 android:textSize="12sp"
                 android:textColor="@android:color/darker_gray" />
 
-            <TextView
-                android:id="@+id/hint_text"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Tap to view details"
-                android:textSize="10sp"
-                android:textStyle="italic"
-                android:textColor="@android:color/darker_gray"
-                android:layout_marginTop="4dp" />
+                android:orientation="horizontal"
+                android:layout_marginTop="4dp"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/hint_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Tap to view details"
+                    android:textSize="10sp"
+                    android:textStyle="italic"
+                    android:textColor="@android:color/darker_gray" />
+
+                <ImageView
+                    android:id="@+id/star_indicator"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_star_empty"
+                    android:visibility="visible" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
